Layout Bug: select neben button zu hoch
Closes #4873

Merge request studip/studip!3650

--- a/resources/assets/stylesheets/scss/selects.scss
+++ b/resources/assets/stylesheets/scss/selects.scss
@@ -207,6 +207,6 @@ select {
 .groupactions {
     select:not([multiple]):not([size]) {
         vertical-align: middle;
-        height: 40px;
+        height: 34px;
     }
 }
